--- a/Day_007_HW.ipynb
+++ b/Day_007_HW.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +38,7 @@
        "(891, 12)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +179,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
        "2      object      5"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
        "2      object      5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,8 +334,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 Integer Features : ['Pclass', 'SibSp', 'Parch']\n",
+      "\n",
+      "2 Float Features : ['Age', 'Fare']\n",
+      "\n",
+      "5 Object Features : ['Name', 'Sex', 'Ticket', 'Cabin', 'Embarked']\n"
+     ]
+    }
+   ],
    "source": [
     "#確定只有 int64, float64, object 三種類型後, 分別將欄位名稱存於三個 list 中\n",
     "int_features = []\n",
@@ -370,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +396,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,25 +431,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Pclass    1\n",
-       "SibSp     0\n",
-       "Parch     0\n",
+       "Pclass    3\n",
+       "SibSp     7\n",
+       "Parch     8\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[int_features].min()"
+    "df[int_features].nunique()"
    ]
   },
   {
@@ -484,29 +498,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Age     0.17\n",
-       "Fare    0.00\n",
-       "dtype: float64"
+       "Age      98\n",
+       "Fare    281\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[float_features].min()"
+    "df[float_features].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +529,7 @@
        "Series([], dtype: float64)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +549,7 @@
        "Series([], dtype: float64)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -546,51 +560,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Series([], dtype: float64)"
+       "Name        1307\n",
+       "Sex            2\n",
+       "Ticket       929\n",
+       "Cabin        186\n",
+       "Embarked       3\n",
+       "dtype: int64"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[object_features].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Series([], dtype: float64)"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# 請依序列出 三種特徵類型 (int / float / object) x 三種方法 (平均 mean / 最大值 Max / 相異值 nunique) 的其餘操作\n",
-    "df[int_features].mean()\n",
-    "df[int_features].max()\n",
-    "df[int_features].min()\n",
-    "df[float_features].mean()\n",
-    "df[float_features].max()\n",
-    "df[float_features].min()\n",
-    "df[object_features].mean()\n",
-    "df[object_features].max()\n",
-    "df[object_features].min()"
+    "df[object_features].nunique()"
    ]
   }
  ],
