--- a/Day_011_HW.ipynb
+++ b/Day_011_HW.ipynb
@@ -413,11 +413,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: 278\n",
+      "450000.0    26022\n",
+      "225000.0    25282\n",
+      "675000.0    24962\n",
+      "900000.0    15416\n",
+      "270000.0    11428\n",
+      "Name: AMT_GOODS_PRICE, dtype: int64\n",
+      "After replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# 3\n",
     "print(\"Before replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: %i\" % sum(app_train['AMT_GOODS_PRICE'].isnull()))\n",
@@ -426,7 +439,7 @@
     "\"\"\"\n",
     "Your Code Here\n",
     "\"\"\"\n",
-    "value_most = \n",
+    "value_most = app_train['AMT_GOODS_PRICE'].value_counts().head()\n",
     "print(value_most)\n",
     "\n",
     "mode_goods_price = list(app_train['AMT_GOODS_PRICE'].value_counts().index)\n",
@@ -434,6 +447,13 @@
     "\n",
     "print(\"After replace NAs, numbers of row that AMT_GOODS_PRICE is NAs: %i\" % sum(app_train['AMT_GOODS_PRICE'].isnull()))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
