--- a/Day_025_HW.ipynb
+++ b/Day_025_HW.ipynb
@@ -350,7 +350,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Name        891\n",
+       "Sex           2\n",
+       "Ticket      681\n",
+       "Cabin       148\n",
+       "Embarked      4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_X.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -358,8 +383,8 @@
      "output_type": "stream",
      "text": [
       "shape : (891, 5)\n",
-      "score : 1.0\n",
-      "time : 0.05393791198730469 sec\n"
+      "score : 0.835019772770071\n",
+      "time : 0.04437112808227539 sec\n"
      ]
     }
    ],
@@ -371,7 +396,7 @@
     "    mean_df.columns = [c, f'{c}_mean']\n",
     "    data = pd.merge(data, mean_df, on=c, how='left')\n",
     "    data = data.drop([c] , axis=1)\n",
-    "data = data.drop(['Survived'] , axis=1)\n",
+    "data = data.drop(['Survived', 'Name_mean', 'Ticket_mean'] , axis=1)\n",
     "estimator = LogisticRegression()\n",
     "start = time.time()\n",
     "print(f'shape : {train_X.shape}')\n",
