--- a/Day_030_HW.ipynb
+++ b/Day_030_HW.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
        "4    male  35.0      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -301,13 +301,13 @@
        "4       3  35.0      0      0   8.0500"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# 記得刪除 Survived\n",
+    "# 記得刪除 SalePrice\n",
     "df = df.drop(['Survived'] , axis=1)\n",
     "\n",
     "#只取 int64, float64 兩種數值型欄位, 存於 num_features 中\n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
        "0.70041428661101"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,36 +359,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Pclass', 'Age', 'SibSp']\n"
+      "['Pclass', 'Age', 'Parch', 'Fare']\n"
      ]
     }
    ],
    "source": [
     "# 篩選相關係數1\n",
-    "high_list = list(corr[(corr['Age']>0.1) | (corr['Age']<-0.1)].index)\n",
-    "high_list.pop(-1)\n",
+    "high_list = list(corr[(corr['Survived']>0.05) | (corr['Survived']<-0.05)].index)\n",
+    "high_list.pop(0)\n",
     "print(high_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6858326533174314"
+       "0.703785073127864"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,36 +401,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Age', 'SibSp', 'Parch']\n"
+      "['Pclass', 'Fare']\n"
      ]
     }
    ],
    "source": [
     "# 篩選相關係數2\n",
-    "high_list = list(corr[(corr['SibSp']>0.1) | (corr['SibSp']<-0.1)].index)\n",
-    "high_list.pop(-1)\n",
+    "high_list = list(corr[(corr['Survived']>0.1) | (corr['Survived']<-0.1)].index)\n",
+    "high_list.pop(0)\n",
     "print(high_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6105580315108907"
+       "0.6790973573535873"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
