--- a/Day_033_HW.ipynb
+++ b/Day_033_HW.ipynb
@@ -26,9 +26,10 @@
    "metadata": {},
    "source": [
     "### 1. 模型的泛化能力 (generalization) 是指什麼？ \n",
+    "the model is powerful enough to cope with unseen data.\n",
     "\n",
     "### 2. 分類問題與回歸問題分別可用的目標函數有哪些？\n",
-    "linear regression"
+    "cross entropy; mean square error"
    ]
   }
  ],
