--- a/Day_035_HW.ipynb
+++ b/Day_035_HW.ipynb
@@ -22,6 +22,15 @@
     "## 請搜尋目標為多標籤問題 (Multi-label) 的機器學習案例，了解其資料來源、目標以及評估指標為何\n",
     "## Hint: 服飾"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://medium.com/coinmonks/multi-label-classification-blog-tags-prediction-using-nlp-b0b5ee6686fc"
+   ]
   }
  ],
  "metadata": {
@@ -40,7 +49,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
