--- a/Day_047_HW.ipynb
+++ b/Day_047_HW.ipynb
@@ -18,48 +18,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets, metrics\n",
     "from sklearn.model_selection import train_test_split, KFold, GridSearchCV\n",
-    "from sklearn.ensemble import GradientBoostingRegressor"
+    "from sklearn.ensemble import GradientBoostingClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 讀取資料集\n",
     "# boston = datasets.load_boston()\n",
+    "cancer = datasets.load_breast_cancer()\n",
     "\n",
     "# 切分訓練集/測試集\n",
-    "#x_train, x_test, y_train, y_test = train_test_split(boston.data, boston.target, test_size=0.25, random_state=42)\n",
+    "x_train, x_test, y_train, y_test = train_test_split(cancer.data, cancer.target, test_size=0.25, random_state=42)\n",
     "\n",
     "# 建立模型\n",
-    "clf = GradientBoostingRegressor(random_state=7)"
+    "clf = GradientBoostingClassifier()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.958041958041958\n"
+     ]
+    }
+   ],
    "source": [
     "# 先看看使用預設參數得到的結果，約為 8.379 的 MSE\n",
     "clf.fit(x_train, y_train)\n",
     "y_pred = clf.predict(x_test)\n",
-    "print(metrics.mean_squared_error(y_test, y_pred))"
+    "print(metrics.accuracy_score(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 9 candidates, totalling 45 fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 4 concurrent workers.\n",
+      "[Parallel(n_jobs=-1)]: Done  38 out of  45 | elapsed:    5.8s remaining:    1.1s\n",
+      "[Parallel(n_jobs=-1)]: Done  45 out of  45 | elapsed:    7.6s finished\n"
+     ]
+    }
+   ],
    "source": [
     "# 設定要訓練的超參數組合\n",
     "n_estimators = [100, 200, 300]\n",
@@ -67,7 +93,7 @@
     "param_grid = dict(n_estimators=n_estimators, max_depth=max_depth)\n",
     "\n",
     "## 建立搜尋物件，放入模型及參數組合字典 (n_jobs=-1 會使用全部 cpu 平行運算)\n",
-    "grid_search = GridSearchCV(clf, param_grid, scoring=\"neg_mean_squared_error\", n_jobs=-1, verbose=1)\n",
+    "grid_search = GridSearchCV(clf, param_grid, scoring=\"accuracy\", n_jobs=-1, verbose=1)\n",
     "\n",
     "# 開始搜尋最佳參數\n",
     "grid_result = grid_search.fit(x_train, y_train)\n",
@@ -77,9 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Accuracy: 0.971792 using {'max_depth': 1, 'n_estimators': 100}\n"
+     ]
+    }
+   ],
    "source": [
     "# 印出最佳結果與最佳參數\n",
     "print(\"Best Accuracy: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))"
@@ -87,21 +121,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'max_depth': 1, 'n_estimators': 100}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "grid_result.best_params_"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 使用最佳參數重新建立模型\n",
-    "clf_bestparam = GradientBoostingRegressor(max_depth=grid_result.best_params_['max_depth'],\n",
+    "clf_bestparam = GradientBoostingClassifier(max_depth=grid_result.best_params_['max_depth'],\n",
     "                                           n_estimators=grid_result.best_params_['n_estimators'])\n",
     "\n",
     "# 訓練模型\n",
@@ -113,13 +158,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.965034965034965\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 調整參數後約可降至 8.30 的 MSE\n",
+    "print(metrics.accuracy_score(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 調整參數後約可降至 8.30 的 MSE\n",
-    "print(metrics.mean_squared_error(y_test, y_pred))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
