--- a/Day_049_Blending_HW.ipynb
+++ b/Day_049_Blending_HW.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
        "4      0      0            373450   8.0500   NaN        S  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "data_path = 'data/'\n",
+    "data_path = '/Users/m.hsiso/100 days for ML/1st-DL-CVMarathon/Day_007/'\n",
     "df_train = pd.read_csv(data_path + 'titanic_train.csv')\n",
     "df_test = pd.read_csv(data_path + 'titanic_test.csv')\n",
     "\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -258,10 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 以下 In[3]~In[10] 只是鐵達尼預測中的一組特徵工程, 並以此組特徵工程跑參數, 若更換其他特徵工程, In[10]的參數需要重新跑\n",
@@ -275,10 +273,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Title 的 特徵工程 : 將各種頭銜按照類型分類, 最後取 One Hot\n",
@@ -292,10 +288,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 新建:家庭大小 (Fsize)特徵, 並依照大小分別建獨立欄位\n",
@@ -308,10 +302,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Ticket : 如果不只是數字-取第一個空白之前的字串(去除'.'與'/'), 如果只是數字-設為'X', 最後再取 One Hot\n",
@@ -327,10 +319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Cabib 依照第一碼分類, 再取 One Hot\n",
@@ -340,10 +330,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Embarked, Pclass 取 One Hot\n",
@@ -357,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -576,12 +564,12 @@
        "3    1  35.0      1      0  3.972177        0        1        0        0   \n",
        "4    0  35.0      0      0  2.085672        0        0        1        0   \n",
        "\n",
-       "   Fsize  ...   Cabin_F  Cabin_G  Cabin_T  Cabin_X  Em_C  Em_Q  Em_S  Pc_1  \\\n",
-       "0      2  ...         0        0        0        1     0     0     1     0   \n",
-       "1      2  ...         0        0        0        0     1     0     0     1   \n",
-       "2      1  ...         0        0        0        1     0     0     1     0   \n",
-       "3      2  ...         0        0        0        0     0     0     1     1   \n",
-       "4      1  ...         0        0        0        1     0     0     1     0   \n",
+       "   Fsize  ...  Cabin_F  Cabin_G  Cabin_T  Cabin_X  Em_C  Em_Q  Em_S  Pc_1  \\\n",
+       "0      2  ...        0        0        0        1     0     0     1     0   \n",
+       "1      2  ...        0        0        0        0     1     0     0     1   \n",
+       "2      1  ...        0        0        0        1     0     0     1     0   \n",
+       "3      2  ...        0        0        0        0     0     0     1     1   \n",
+       "4      1  ...        0        0        0        1     0     0     1     0   \n",
        "\n",
        "   Pc_2  Pc_3  \n",
        "0     0     1  \n",
@@ -593,7 +581,7 @@
        "[5 rows x 66 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,10 +594,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 將資料最大最小化\n",
@@ -632,10 +618,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 線性迴歸預測檔 (結果有部分隨機, 請以 Kaggle 計算的得分為準, 以下模型同理)\n",
@@ -648,10 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 16,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 梯度提升機預測檔 \n",
@@ -664,10 +646,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 17,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# 隨機森林預測檔\n",
@@ -696,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -704,9 +684,9 @@
     "\"\"\"\n",
     "Your Code Here\n",
     "\"\"\"\n",
-    "blending_pred = lr_pred*  + gdbt_pred* + rf_pred*\n",
+    "blending_pred = lr_pred*0.15  + gdbt_pred*0.60 + rf_pred*0.25\n",
     "sub = pd.DataFrame({'PassengerId': ids, 'Survived': blending_pred})\n",
-    "sub['Survived'] =  \n",
+    "sub['Survived'] = sub['Survived'].map(lambda x:1 if x>0.6 else 0) \n",
     "sub.to_csv('titanic_blending.csv', index=False)"
    ]
   },
@@ -736,7 +716,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
